--- a/content/blog/post-1.mdx
+++ b/content/blog/post-1.mdx
@@ -1,8 +1,8 @@
 ---
 id: p0sxftnpldu
 slug: post-1
-title: "Post 1 this is a test post with a long title"
-date: 2024-04-09
+title: "hello world"
+date: "2024-04-19"
 ---
 
-**hello world**
+👋🌎
